# AdwSteamGtk

./: .editorconfig  README.md  io.github.Foldex.AdwSteamGtk.json  meson.build
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: main.yml
data/: io.github.Foldex.AdwSteamGtk.appdata.xml.in  io.github.Foldex.AdwSteamGtk.desktop.in  io.github.Foldex.AdwSteamGtk.gschema.xml  meson.build
data/adw/: README.md  install_theme  meson.build
data/icons/: meson.build
po/: AdwSteamGtk.pot  LINGUAS  POTFILES  README.md  ar.po  be.po  ca.po  ckb.po  cs.po  de.po  es.po  fi.po  fr.po  hi.po  hu.po  it.po  meson.build  nl.po  pt.po  pt_BR.po  ru.po  sr.po  sv.po  ta.po  tr.po  uk.po  update_pot.sh  zh_Hans.po
src/: adwaita-steam-gtk.in  adwaita_steam_gtk.gresource.xml  cli.py  custom_css.py  dl.py  info.py.in  install.py  main.py  meson.build  paths.py  style.py  update.py  window.blp  window.py  zip.py
src/pages/: prefs.py  window.py
src/ui/: prefs.blp  window.blp
